--- a/index.html
+++ b/index.html
@@ -1,21 +1,104 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="css.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./lib/swiper/swiper.min.css">
+    <link rel="stylesheet" href="./style/index.css">
+    <style>
+        * {
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+
+        /* 设置滑动页面容器的样式 */
+
+        .swiper-container {
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        body {
+            overflow: hidden;
+        }
+    </style>
+    <title>李洪伟个人介绍</title>
 </head>
+
 <body>
-    <h1>这是我的放在github上的第一个界面</h1>
-    <p>我是 Mr hong,以后欢迎常来我的空间转转</p>
-    <p>年轻人，少熬夜，多学习，注意身体</p>
-    <button>点击查看作者名字</button>
-    <div class="name">
-        <div class="con">
-            <p>nice to meet you,i am Mr hong,and you?</p>
-            <p>goodnght</p>
+
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="head-img"></div>
+                <div class="row">
+                    <span style="margin-left:30px;">姓名：</span>
+                    <span>李洪伟</span>
+                </div>
+                <div class="row">
+                    <span>毕业院校：</span>
+                    <span>烟台大学</span>
+                </div>
+                <div class="row">
+                    <span>主修专业：</span>
+                    <span>计算机科学与技术</span>
+                </div>
+                <div class="row">
+                    <span>应聘职位：</span>
+                    <span>前端工程师</span>
+                </div>
+            </div>
+            <div class="swiper-slide" style="background: green;">Slide 2</div>
+            <div class="swiper-slide" style="background: rgb(204, 41, 155);">Slide 3</div>
         </div>
+        <!-- 如果需要分页器 -->
+        <div class="swiper-pagination"></div>
+
+        <!-- 如果需要导航按钮 -->
+        <!-- <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div> -->
+
+        <!-- 如果需要滚动条 -->
+        <div class="swiper-scrollbar"></div>
     </div>
+
+
+
+    <script src="./lib/swiper/swiper.js"></script>
+    <script src="./script/index.js"></script>
+    <script>
+        var mySwiper = new Swiper('.swiper-container', {
+            direction: 'vertical',
+            loop: true,
+
+            // 如果需要分页器
+            pagination: {
+                el: '.swiper-pagination',
+            },
+
+            // 如果需要前进后退按钮
+            // navigation: {
+            //     nextEl: '.swiper-button-next',
+            //     prevEl: '.swiper-button-prev',
+            // },
+
+            // 如果需要滚动条
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
+            on: {
+                slideChangeTransitionEnd: function(){
+                    //alert(this.activeIndex);//切换结束时，告诉我现在是第几个slide
+                    
+                }
+            }
+        })
+
+    </script>
 </body>
-<script src="js.js"></script>
+
 </html>
