--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <div class="swiper-slide onePage">
                 <div class="head-img"></div>
                 <div class="row">
                     <span style="margin-left:30px;">姓名：</span>
@@ -93,7 +93,7 @@
             on: {
                 slideChangeTransitionEnd: function(){
                     //alert(this.activeIndex);//切换结束时，告诉我现在是第几个slide
-                    
+
                 }
             }
         })
