第一页完成

--- a/index.html
+++ b/index.html
@@ -51,8 +51,18 @@
                     <span>应聘职位：</span>
                     <span>前端工程师</span>
                 </div>
+                <div class="row">
+                        <span>联系电话：</span>
+                        <span>17862806857</span>
+                </div>
+                <div class="row">
+                        <span >邮箱：</span>
+                        <span>17862806857@163.com</span>
+                </div>
             </div>
-            <div class="swiper-slide" style="background: green;">Slide 2</div>
+            <div class="swiper-slide twoPage">
+
+            </div>
             <div class="swiper-slide" style="background: rgb(204, 41, 155);">Slide 3</div>
         </div>
         <!-- 如果需要分页器 -->
