增加了音乐

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
     </div>
 
 
+<!-- 音乐标签 -->
+    <audio src="./music/bg-music.mp3" autoplay loop>
+        您的浏览器不支持 audio 标签。
+    </audio>
 
     <script src="./lib/swiper/swiper.js"></script>
     <script src="./script/index.js"></script>
