框架 nav 静态页

--- a/modules/self-introduction/index.html
+++ b/modules/self-introduction/index.html
@@ -5,15 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./lib/swiper/swiper.min.css">
-    <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="../../assets/jslib/swiper/swiper.min.css">
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="../../assets/pub-style/pub-init.css">
     <style>
-        * {
-            box-sizing: border-box;
-            padding: 0;
-            margin: 0;
-        }
-
         /* 设置滑动页面容器的样式 */
 
         .swiper-container {
@@ -150,12 +145,12 @@
 
 
 <!-- 音乐标签 -->
-    <audio src="./music/bg-music.mp3" autoplay loop>
+    <audio src="music/bg-music.mp3" autoplay loop>
         您的浏览器不支持 audio 标签。
     </audio>
 
-    <script src="./lib/swiper/swiper.js"></script>
-    <script src="./script/index.js"></script>
+    <script src="../../assets/jslib/swiper/swiper.js"></script>
+    <script src="script/index.js"></script>
     <script>
         var mySwiper = new Swiper('.swiper-container', {
             direction: 'vertical',
