--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>李洪伟的主页</title>
-    <link rel="stylesheet" href="./style/index.css">
-    <link rel="stylesheet" href="../../assets/pub-style/pub-init.css">
+    <link rel="stylesheet" href="modules/index/style/index.css">
+    <link rel="stylesheet" href="assets/pub-style/pub-init.css">
 </head>
 <body>
     <header class="index-header">
