--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ol>
                 <li>主页</li>
                 <li>读书笔记</li>
-                <li>个人简历</li>
+                <li><a href="./modules/self-introduction/index.html">个人简历</a></li>
                 <li>个人主页</li>
                 <li>个人主页</li>
             </ol>
